# World-Model-Latent-Planning

./: .gitignore  autogen.py  entrypoint.py  pyproject.toml
app/image_painter/: eval.py
app/image_painter/compile/: dataloader.py  loss.py  optim.py  resume.py
app/latent_dreaming/: eval.py  train.py
app/latent_dreaming/compile/: __init__.py  _visualize.py  dataloader.py  models.py  optim.py  transform.py
augmenter/: transforms_builder.py
cfgs/latent_dreaming/: diffusion-goal.yaml  diffusion-wm.yaml
datasets/: collator.py  dataset.py  sampler.py
datasets/augmentation/: transforms.py  transforms_builder.py
datasets/utils/: coordinate_transform.py  dataloader.py  decode.py  metadata.py  weighted_sampler.py  worker_init_fn.py
masks/: multiseq_multiblock3d.py  utils.py
models/: diffusion_goal.py  diffusion_wm.py
networks/DiT/: dit.py  dit_steering.py
utils/: autoload_modules.py  checkpoint_loader.py  distributed.py  early_stop.py  grad_optim.py  logger.py  schedulers.py  training_logger.py  visualize_schedule.py
